--- a/sign-in.html
+++ b/sign-in.html
@@ -10,11 +10,11 @@
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
-        <link href="sign-in.css" rel="stylesheet">
+        <link href="css/sign-in.css" rel="stylesheet">
     </head>
-    <body class="text-center" style="background-image: url('plasma_d.gif'); color: #ffffff; background-repeat: repeat;">
+    <body class="text-center" style="background-image:url(images/plasma_d.gif); color: #ffffff; background-repeat:no-repeat; background-size: cover;">
         <form class="form-signin">
-            <img alt="" width="72" height="72" style="background-image: url('download.jpeg');">
+            <img alt="" width="72" height="72" style="background-image: url(images/download.jpeg)">
             <h1 class="h3 mb-3 font-weight-normal" style="color: #f7f2f2;">Please sign in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <label for="inputPassword" class="sr-only">Password</label>
