--- a/sign-in.html
+++ b/sign-in.html
@@ -8,21 +8,22 @@
         <meta name="author" content="">
         <title>Signin Template for Bootstrap</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">   
         <!-- Custom styles for this template -->
         <link href="sign-in.css" rel="stylesheet">
     </head>
     <body class="text-center" style="background-image: url('plasma_d.gif'); color: #ffffff; background-repeat: repeat;">
         <form class="form-signin">
-            <img alt="" width="72" height="72" style="background-image: url('download.jpeg');">
-            <h1 class="h3 mb-3 font-weight-normal" style="color: #f7f2f2;">Please sign in</h1>
+            <!-- <img alt="" width="72" height="72" style="background-image: url('download.jpeg');"> -->
+            <h1 class="h3 mb-3 font-weight-normal" style="color: #f7f2f2;">Please Sign in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            
             <div class="checkbox mb-3">
                 <label style="color: #fbf9f9;">
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <input id="rememberMe" type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
