fixed background iamge so it covers page

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="text-center" style="background-image: url('plasma_d.gif'); color: #ffffff; background-repeat: repeat;">
-    <img alt="" width="72" height="72" style="background-image: url('download.jpeg');">
+    <img alt="" width="72" height="72" style="background-image: url('download.jpeg'); background-repeat: none; background-size: cover; ">
     <div id="firebaseui-auth-container">
     
     </div>
