firebase login features, authentication with google, email, and phone

--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -58,7 +58,7 @@
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            apiKey: "Input api key here",
+            apiKey: "AIzaSyBz83kqwVu8gWrGAjkitG3sh5VtbWfbG2U",
             authDomain: "stock-a30ff.firebaseapp.com",
             databaseURL: "https://stock-a30ff.firebaseio.com",
             projectId: "stock-a30ff",
