--- a/sign-in.html
+++ b/sign-in.html
@@ -26,6 +26,7 @@
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <button id="button">hello</button>
             <p class="mt-5 mb-3 text-muted" style="color: #f9f3f3;">&copy; 2020 DC-Stocks</p>
         </form>
         <!-- Bootstrap core JavaScript
